Mon Aug 20 23:28:39 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (Init_String): remove Symbol.intern and Symbol#dump.
	  [ruby-dev:31525]

	* dir.c (dir_foreach): return Enumerator if no block given.
	  [ruby-dev:31525]

	* io.c (rb_io_s_foreach): argument count check before making
	  Enumerator.  [ruby-dev:31525]

Mon Aug 20 23:17:14 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_core.h (struct rb_thread_struct): removed first_func_arg and
	  reuse first_args instead.

Sun Aug 19 13:31:40 2007  Tanaka Akira  <akr@fsij.org>

	* gc.c: use VALGRIND_MAKE_MEM_UNDEFINED to detect use of collected
	  objects if valgrind is available.  It cannot detect first 2 words
	  because they are used as the free list.

Sun Aug 19 13:13:52 2007  Koichi Sasada  <ko1@atdot.net>

	* compile.c (iseq_compile_each/NODE_RESBODY): fix to add
	  additional nop to prevent tailcall optimization.

	* vm_opts.h: clean up comments.

Sun Aug 19 12:58:39 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_call_bmethod): fix to propagate information
	  that this proc is "from Method".  [ruby-dev:31490]

	* proc.c (method_proc, rb_mod_define_method): ditto.

	* vm.c (vm_invoke_proc_core): removed.

	* vm_core.h: ditto.

Sun Aug 19 12:36:11 2007  Tanaka Akira  <akr@fsij.org>

	* test/ruby/sentence.rb: new method Sentence().

Sun Aug 19 12:32:39 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_callee_setup_arg): fix to mark enough VM stack.
	  [ruby-dev:31492]

Sat Aug 18 19:02:34 2007  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_yield.rb (TestYieldGen): relax array size check
	  in nested parameters.
	  [ruby-dev:31485]

Sat Aug 18 17:44:42 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tk/tcltklib.c (Init_tcltklib): use rb_set_end_proc().

Sat Aug 18 17:40:11 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (is_ruby_native_thread): check properly.  [ruby-dev:31166]

Sat Aug 18 16:44:15 2007  Koichi Sasada  <ko1@atdot.net>
